<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dice Roller</string>
    <string name="action_settings">Settings</string>
    <string name="action_goToTreasureGenerator">Treasure Generator</string>
    <string name="action_goToDiceRoller">Dice Roller</string>
    <string name="string_d4">d4</string>
    <string name="string_d6">d6</string>
    <string name="string_d8">d8</string>
    <string name="string_d10">d10</string>
    <string name="string_d12">d12</string>
    <string name="string_d20">d20</string>
    <string name="string_d100">d100</string>
    <string name="string_addDamage_t">Add</string>
    <string name="string_addDamage_f">Separate</string>
    <string name="temp">100</string>

    <string-array name="stringArray_rollCount">
        <item name="1">1</item>
        <item name="2">2</item>
        <item name="3">3</item>
        <item name="4">4</item>
        <item name="5">5</item>
        <item name="6">6</item>
        <item name="7">7</item>
        <item name="8">8</item>
        <item name="9">9</item>
        <item name="10">10</item>
    </string-array>

    <string name="title_activity_treasure_generator4e">4e Treasure Generator</string>
    <string name="hello_world">Hello world!</string>

</resources>
